--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "bs58": "^5.0.0",
+    "buffer-layout": "^1.2.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "^13.4.12",
